Fixing up the collapse link. @illmasterc did a great job fixing the hover issue. See #64

--- a/sites/all/themes/dev/warmshowers_zen/css/fresh.css
+++ b/sites/all/themes/dev/warmshowers_zen/css/fresh.css
@@ -706,8 +706,11 @@ div.block-locale ul a.active {
 
 /* End welcome block styles */
 
-#collapse_map {
+#content #collapse_map {
     display: none;
+		margin-top: -5px;
+		margin-bottom: 5px;
+		text-decoration: none;
 }
 
 #block-wsuser-wsuser_member_count_block {
